  specialized IRT models with `mirt`, such as the: Ramsay quotient,
  latent class, mixed Rasch, located latent class, probabilistic Guttman,
  nonparametric, discrete graded membership, and multidimensional IRT discrete
  traits, DINA, and Rasch copula models.

  - exploratory IRT models are no longer rotated by default in `coef()`,
  and now requires an explicit `rotate` argument

NEW FEATURES

  - `mdirt` function added to model discrete latent variables such as latent
  class analysis for dichotomous and polytomous items. Cand be used to model
  several other dicrete IRT models as well, such as the located latent class
  model, multidimensional IRT with discrete traits, DINA models, etc. See
  the examples and documentation for details

  - axillary support for `DiscreteClass` objects added to `itemfit()`,
  `M2()`, `fscores()`, `wald()`, and `boot.mirt()`

  - the S-X2 statistic available in `itemfit()` has been generalized to
  include multidimensional models

BUG FIXES

  - fixed bug in `bfactor()` starting values when NAs were specified in the
  `model` argument

Changes in mirt 1.5

MAJOR CHANGES

  - for efficiency, the Hessian is no longer computed in `fscores()` unless
  it is required in the returned object

  - estimation with `method = 'MHRM'` now requires and explicitly `SE=TRUE`
  call to compute the information matrix. The matrix is now computed using
  the ML estimates rather than approximated sequentially after each iteration
  (very unstable), and therefore a separate stage is performed. This provides
  much better accuracy in the computations

NEW FEATURES

  - new `extract.group()` function to extract a single group object from an
  objects previously returned by `multipleGroup()`

  - return the SRMSR statistic in `M2()` along with the residual matrix
  (suggested by Dave Flora)

  - accept `Etable` default input in `customPriorFun` (suggested by Alexander
  Robitzsch)

  - vignette files for the package examples are now hosted on Github and